welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value nbBiscui
while (nbBiscui<3){
       ^RunFour:4: error: not found: value surBiscuit
	while (!surBiscuit()){
                ^